--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="src/style.css" />
     <link href="/dist/output.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"
+    />
   </head>
-  <body>
-    <header class="h-20 flex items-center gap-6 w-screen">
+  <body class="bg-stone-800 text-gray-300">
+    <header class="backdrop-blur-sm h-20 flex items-center gap-6 w-screen sticky top-0 z-50 border-b border-idk-gray">
       <div class="pl-4">
         <img
           src="https://media.discordapp.net/attachments/819918054791446529/1037071647783534702/20221101_1912080.jpg?width=514&height=685"
@@ -17,91 +22,117 @@
           style="object-position: 50% 50%"
         />
       </div>
-      <strong class="from-neutral-100 text-2xl">Wiktor Falek</strong>
+      <strong class="from-neutral-100 text-3xl">Wiktor Falek</strong>
     </header>
 
-    <main class="flex content-start py-16">
-      <aside class="flex flex-col justify-center w-fit">
-        <div class="vertical h-full"></div>
-        <ul class="flex flex-col gap-2 items-center content-center w-24 py-6">
-          <li>
-            <a href="https://github.com/wiktor-falek" target="_blank">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="48"
-                height="48"
-                preserveAspectRatio="xMidYMid meet"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  fill="currentColor"
-                  d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5c.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34c-.46-1.16-1.11-1.47-1.11-1.47c-.91-.62.07-.6.07-.6c1 .07 1.53 1.03 1.53 1.03c.87 1.52 2.34 1.07 2.91.83c.09-.65.35-1.09.63-1.34c-2.22-.25-4.55-1.11-4.55-4.92c0-1.11.38-2 1.03-2.71c-.1-.25-.45-1.29.1-2.64c0 0 .84-.27 2.75 1.02c.79-.22 1.65-.33 2.5-.33c.85 0 1.71.11 2.5.33c1.91-1.29 2.75-1.02 2.75-1.02c.55 1.35.2 2.39.1 2.64c.65.71 1.03 1.6 1.03 2.71c0 3.82-2.34 4.66-4.57 4.91c.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2Z"
-                />
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a
-              href="https://www.linkedin.com/in/wiktor-falek-644701229/"
-              target="_blank"
+    <aside
+      class="flex flex-col justify-center w-fit h-screen fixed py-32 left-0 top-0 invisible sm:visible"
+    >
+      <div class="vertical h-full"></div>
+      <ul
+        class="flex flex-col gap-2 items-center content-center w-24 h-fit py-6"
+      >
+        <li>
+          <a href="https://github.com/wiktor-falek" target="_blank">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="48"
+              height="48"
+              preserveAspectRatio="xMidYMid meet"
+              viewBox="0 0 24 24"
             >
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="48"
-                height="48"
-                preserveAspectRatio="xMidYMid meet"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  fill="currentColor"
-                  d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14m-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93h2.79M6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37h2.77Z"
-                />
-              </svg>
-            </a>
+              <path
+                fill="currentColor"
+                d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5c.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34c-.46-1.16-1.11-1.47-1.11-1.47c-.91-.62.07-.6.07-.6c1 .07 1.53 1.03 1.53 1.03c.87 1.52 2.34 1.07 2.91.83c.09-.65.35-1.09.63-1.34c-2.22-.25-4.55-1.11-4.55-4.92c0-1.11.38-2 1.03-2.71c-.1-.25-.45-1.29.1-2.64c0 0 .84-.27 2.75 1.02c.79-.22 1.65-.33 2.5-.33c.85 0 1.71.11 2.5.33c1.91-1.29 2.75-1.02 2.75-1.02c.55 1.35.2 2.39.1 2.64c.65.71 1.03 1.6 1.03 2.71c0 3.82-2.34 4.66-4.57 4.91c.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2Z"
+              />
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://www.linkedin.com/in/wiktor-falek-644701229/"
+            target="_blank"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="48"
+              height="48"
+              preserveAspectRatio="xMidYMid meet"
+              viewBox="0 0 24 24"
+            >
+              <path
+                fill="currentColor"
+                d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14m-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93h2.79M6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37h2.77Z"
+              />
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a
+            href="mailto:falekwiktor@gmail.com"
+            target="_blank"
+            class="flex items-center"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="46"
+              height="46"
+              preserveAspectRatio="xMidYMid meet"
+              viewBox="0 0 24 24"
+            >
+              <path
+                fill="currentColor"
+                d="M12.72 2.03A9.991 9.991 0 0 0 2.03 12.72C2.39 18.01 7.01 22 12.31 22H16c.55 0 1-.45 1-1s-.45-1-1-1h-3.67c-3.73 0-7.15-2.42-8.08-6.03c-1.49-5.8 3.91-11.21 9.71-9.71C17.58 5.18 20 8.6 20 12.33v1.1c0 .79-.71 1.57-1.5 1.57s-1.5-.78-1.5-1.57v-1.25c0-2.51-1.78-4.77-4.26-5.12a5.008 5.008 0 0 0-5.66 5.87a4.996 4.996 0 0 0 3.72 3.94c1.84.43 3.59-.16 4.74-1.33c.89 1.22 2.67 1.86 4.3 1.21c1.34-.53 2.16-1.9 2.16-3.34v-1.09c0-5.31-3.99-9.93-9.28-10.29zM12 15c-1.66 0-3-1.34-3-3s1.34-3 3-3s3 1.34 3 3s-1.34 3-3 3z"
+              />
+            </svg>
+          </a>
+        </li>
+      </ul>
+      <div class="vertical h-full"></div>
+    </aside>
+    <!-- <aside class="flex items-end justify-center w-28">
+      <ul class="flex flex-col gap-6">
+          <li class="flex content-center items-center">
+            <div class="square square--active"></div>
           </li>
           <li>
-            <a
-              href="mailto:falekwiktor@gmail.com"
-              target="_blank"
-              class="flex items-center"
-            >
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="46"
-                height="46"
-                preserveAspectRatio="xMidYMid meet"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  fill="currentColor"
-                  d="M12.72 2.03A9.991 9.991 0 0 0 2.03 12.72C2.39 18.01 7.01 22 12.31 22H16c.55 0 1-.45 1-1s-.45-1-1-1h-3.67c-3.73 0-7.15-2.42-8.08-6.03c-1.49-5.8 3.91-11.21 9.71-9.71C17.58 5.18 20 8.6 20 12.33v1.1c0 .79-.71 1.57-1.5 1.57s-1.5-.78-1.5-1.57v-1.25c0-2.51-1.78-4.77-4.26-5.12a5.008 5.008 0 0 0-5.66 5.87a4.996 4.996 0 0 0 3.72 3.94c1.84.43 3.59-.16 4.74-1.33c.89 1.22 2.67 1.86 4.3 1.21c1.34-.53 2.16-1.9 2.16-3.34v-1.09c0-5.31-3.99-9.93-9.28-10.29zM12 15c-1.66 0-3-1.34-3-3s1.34-3 3-3s3 1.34 3 3s-1.34 3-3 3z"
-                />
-              </svg>
-            </a>
+              <div class="square"></div>
           </li>
-        </ul>
-        <div class="vertical h-full"></div>
-      </aside>
-      <div class="flex w-full">
-        <h1 class="text-6xl">Hi</h1>
-      </div>
-      <div class="flex items-end justify-center w-28">
-        <ul class="flex flex-col gap-6">
-            <li>
-                <div class="square square--active"></div>
-            </li>
-            <li>
-                <div class="square"></div>
-            </li>
-            <li>
-                <div class="square"></div>
-            </li>
-            <li>
-                <div class="square"></div>
-            </li>
-        </ul>
-      </div>
+          <li>
+              <div class="square"></div>
+          </li>
+          <li>
+              <div class="square"></div>
+          </li>
+      </ul>
+    </aside> -->
+
+    <main class="content-start w-9/12 m-auto">
+      <section class="w-full h-screen pt-32">
+        <h1>
+          Hi, I'm
+          <span class="text-green-400">Wiktor Falek</span>
+        </h1>
+        <h2 class="text-6xl block">Fullstack JavaScript developer</h2>
+        <button class="py-2 px-6 bg-green-800 rounded text-3xl">
+          Call to action
+        </button>
+      </section>
+
+      <section>
+        <h1>My tech stack</h1>
+        <div class="grid gap-3">
+          <div class="w-32 h-24 bg-neutral-700 flex items-center justify-center flex-col rounded-sm">
+            <i class="devicon-html5-plain colored text-5xl"></i>
+            <p class="text-xl">HTML5</p>
+          </div>
+
+          <div class="w-32 h-24 bg-neutral-700 flex items-center justify-center flex-col rounded-sm">
+            <i class="devicon-css3-plain colored text-5xl"></i>
+            <p class="text-xl">CSS</p>
+          </div>
+        </div>
+      </section>
     </main>
-    <main></main>
   </body>
 </html>
