--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     />
   </head>
   <body class="bg-stone-800 text-gray-300">
-    <header class="backdrop-blur-sm h-20 flex items-center gap-6 w-screen sticky top-0 z-50 border-b border-idk-gray">
+    <header
+      class="backdrop-blur-sm h-20 flex items-center gap-6 w-screen sticky top-0 z-50 border-b border-c-gray"
+    >
       <div class="pl-4">
         <img
           src="https://media.discordapp.net/attachments/819918054791446529/1037071647783534702/20221101_1912080.jpg?width=514&height=685"
@@ -26,12 +28,10 @@
     </header>
 
     <aside
-      class="flex flex-col justify-center w-fit h-screen fixed py-32 left-0 top-0 invisible sm:visible"
+      class="flex flex-col justify-center w-16 h-screen fixed py-32 left-0 top-0 invisible sm:visible"
     >
       <div class="vertical h-full"></div>
-      <ul
-        class="flex flex-col gap-2 items-center content-center w-24 h-fit py-6"
-      >
+      <ul class="flex flex-col gap-2 items-center content-center h-fit py-6">
         <li>
           <a href="https://github.com/wiktor-falek" target="_blank">
             <svg
@@ -107,29 +107,125 @@
       </ul>
     </aside> -->
 
-    <main class="content-start w-9/12 m-auto">
-      <section class="w-full h-screen pt-32">
+    <main class="content-start w-10/12 m-auto">
+      <section class="w-full h-screen pt-32 sm:ml-6">
         <h1>
           Hi, I'm
           <span class="text-green-400">Wiktor Falek</span>
         </h1>
         <h2 class="text-6xl block">Fullstack JavaScript developer</h2>
-        <button class="py-2 px-6 bg-green-800 rounded text-3xl">
+        <button class="py-2 px-6 my-6 uppercase bg-green-800 rounded text-2xl">
           Call to action
         </button>
       </section>
 
-      <section>
-        <h1>My tech stack</h1>
-        <div class="grid gap-3">
-          <div class="w-32 h-24 bg-neutral-700 flex items-center justify-center flex-col rounded-sm">
-            <i class="devicon-html5-plain colored text-5xl"></i>
-            <p class="text-xl">HTML5</p>
+      <section class="mx-auto w-fit">
+        <h1 class="mb-6 text-center">My tech stack</h1>
+        <h2 class="text-lg">Hover to see more</h2>
+        <div
+          class="grid grid-cols-auto gap-2 grid-rows-2 lg:grid-cols-6 grid-cols-3 w-fit"
+        >
+          <div class="c-tile">
+            <i class="devicon-html5-plain colored"></i>
+            <p>HTML5</p>
           </div>
 
-          <div class="w-32 h-24 bg-neutral-700 flex items-center justify-center flex-col rounded-sm">
-            <i class="devicon-css3-plain colored text-5xl"></i>
-            <p class="text-xl">CSS</p>
+          <div class="c-tile">
+            <i class="devicon-css3-plain colored"></i>
+            <p>CSS</p>
+          </div>
+          <div class="c-tile">
+            <i class="devicon-javascript-plain colored"></i>
+            <p>JavaScript</p>
+          </div>
+          <div class="c-tile">
+            <i class="devicon-vuejs-plain colored"></i>
+            <p>Vue.js</p>
+          </div>
+          <div class="c-tile">
+            <i class="devicon-react-plain colored"></i>
+            <p>React</p>
+          </div>
+          <div class="c-tile">
+            <i class="devicon-tailwindcss-plain colored"></i>
+            <p>Tailwind</p>
+          </div>
+
+          <div class="c-tile">
+            <i class="devicon-nodejs-plain colored"></i>
+            <p>Node.js</p>
+          </div>
+          <div class="c-tile">
+            <i class="devicon-express-original"></i>
+            <p>Express</p>
+          </div>
+          <div class="c-tile">
+            <i class="devicon-typescript-plain colored"></i>
+            <p>TypeScript</p>
+          </div>
+          <div class="c-tile">
+            <i class="devicon-mongodb-plain colored"></i>
+            <p>MongoDB</p>
+          </div>
+          <div class="c-tile">
+            <i class="devicon-jest-plain colored"></i>
+            <p>Jest</p>
+          </div>
+          <div class="c-tile">
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg"
+            />
+            <!-- <i class="devicon-python-plain"></i> -->
+            <p>Python</p>
+          </div>
+          <!-- <div class="c-tile">
+            <i class="devicon-django-plain"></i>
+            <p>Django</p>
+          </div> -->
+
+          <div class="c-tile">
+            <i class="devicon-git-plain colored"></i>
+            <p>Git</p>
+          </div>
+          <div class="c-tile">
+            <i class="devicon-vscode-plain colored"></i>
+            <p>VSCode</p>
+          </div>
+          <div class="c-tile">
+            <img
+              src="https://www.vectorlogo.zone/logos/archlinux/archlinux-icon.svg"
+              alt=""
+            />
+            <p>Linux</p>
+          </div>
+          <div class="c-tile">
+            <i class="devicon-bash-plain"></i>
+            <p>Zsh</p>
+          </div>
+          <div class="c-tile">
+            <svg
+              style="
+                color: rgb(255, 120, 0);
+                --darkreader-inline-color: #f4dc41;
+              "
+              role="img"
+              viewBox="0 0 24 24"
+              xmlns="http://www.w3.org/2000/svg"
+              data-darkreader-inline-color=""
+            >
+              <title>Alacritty</title>
+              <path
+                d="m10.065 0-8.57 21.269h3.595l6.91-16.244 6.91 16.244h3.594l-8.57-21.269zm1.935 9.935c-0.76666 1.8547-1.5334 3.7094-2.298 5.565 1.475 4.54 1.475 4.54 2.298 8.5 0.823-3.96 0.823-3.96 2.297-8.5-0.76637-1.8547-1.5315-3.7099-2.297-5.565z"
+                fill="#ff7800"
+                style="--darkreader-inline-fill: #f4dc41"
+                data-darkreader-inline-fill=""
+              ></path>
+            </svg>
+            <p>Alacritty</p>
+          </div>
+          <div class="c-tile">
+            <img src="./i3wm.png" alt="" />
+            <p>i3-gaps</p>
           </div>
         </div>
       </section>
