--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"
     />
   </head>
-  <body class="bg-stone-800 text-gray-300">
+  <body class="bg-c-bg text-gray-300">
     <header
       class="backdrop-blur-sm h-20 flex items-center gap-6 w-screen sticky top-0 z-50 border-b border-c-gray"
     >
