--- a/index.html
+++ b/index.html
@@ -267,6 +267,7 @@
           <div class="w-1/2 flex bg-slate-600 opacity-5">.</div>
           <div class="w-1/2">
             <img
+              loading="lazy"
               class="w-fit h-auto"
               src="./public/22-Nov-22 23-47-29.png"
               alt="flashcards app"
